# Overwatch-mcp

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  dev-quick-ref.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docker-build.yml
Docs/: PROGRESS.md  cursor-handoff.md  spec.md  testing-harness.md  usage-guide.md
compose/: .env.example  README.md  config.example.yaml  docker-compose.yml  setup.sh
config/: config.example.yaml
scripts/: discover_applications.py
src/overwatch_mcp/: __init__.py  __main__.py  cache.py  config.py  server.py
src/overwatch_mcp/clients/: __init__.py  base.py  graylog.py  influxdb.py  prometheus.py
src/overwatch_mcp/models/: __init__.py  config.py  errors.py  responses.py
src/overwatch_mcp/tools/: __init__.py  graylog.py  influxdb.py  prometheus.py
tests/: __init__.py  conftest.py
tests/integration/: test_graylog_tool.py  test_influxdb_tool.py  test_prometheus_tool.py
tests/unit/: test_cache.py  test_config.py  test_graylog_client.py  test_influxdb_client.py  test_prometheus_client.py
